# fastai

./: AGENTS.md  README.md  chat_client.py  main.py  pyproject.toml  sessions.db  sessions.py
client/: __init__.py  main.py
client/tools/: __init__.py  weather.py
client/tools/docx_parser/: __init__.py
client/tools/find_file/: __init__.py
client/tools/pdf_parser/: __init__.py  file-example_PDF_1MB.pdf:Zone.Identifier  skills-based-cv.pdf:Zone.Identifier
client/tools/weather/: __init__.py
client/tools/web_search/: __init__.py
tools/: __init__.py  models.py  streaming.py
